syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data";
option java_package = "ru.yandex.alice.protos.data";

import "mapreduce/yt/interface/protos/extension.proto";

message TFmRadioInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated string FmRadioIds = 1 [json_name = "fm_radio_ids"];
    bool SimpleNlu = 2 [json_name = "simple_nlu"];
    string ContentMetatag = 3 [json_name = "content_metatag", (NYT.column_name) = "content_metatag"]; // "genre:rock", "mood:happy", etc.
    string TrackId = 4 [json_name = "track_id", (NYT.column_name) = "track_id"];
}
