syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/centaur";
option java_package = "ru.yandex.alice.protos.data.scenario.centaur";

import "mapreduce/yt/interface/protos/extension.proto";

message TCentaurWebviewData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string WebviewUrl = 2 [json_name = "webview_url", (NYT.column_name) = "webview_url"];
    bool ShowNavigationBar = 3 [json_name = "show_navigation_bar", (NYT.column_name) = "show_navigation_bar"];
    string MediaSessionId = 4 [json_name = "media_session_id", (NYT.column_name) = "media_session_id"];
}
